# software-engineering-assignments

autoconf_and_automake/code/: Makefile.am  README  configure.ac
autoconf_and_automake/code/headers/: options.h
autoconf_and_automake/code/src/: main.c  options.c
autoconf_and_automake/code/test/: file.txt
custom_testing_for_factorial_program_using_python3/: factorial.py  test.py
programs_in_bash/area_and_circumference_of_circle/: area_and_circumference_of_circle.sh
programs_in_bash/basic_calculator/: basic_calculator.sh
programs_in_bash/calculate_avg_percentage_and_grade/: calculate_avg_percentage_and_grade.sh
programs_in_bash/check_directory_existence_and_create_if_doesn_t_exist/: check_directory_existence_and_create_if_doesn_t_exist.sh
programs_in_bash/check_if_files_have_same_content/: check_if_files_have_same_content.sh
programs_in_bash/check_if_string_is_palindrome/: check_if_string_is_palindrome.sh
programs_in_bash/csv_to_vcf/: csv_to_vcf.sh
programs_in_bash/efficient_factorial/: efficient_factorial.sh
programs_in_bash/grading_percentage_of_marks/: grading_percentage_of_marks.sh
programs_in_bash/identify_odd_even_numbers/: identify_odd_even_numbers.sh
programs_in_bash/identify_prime_number_using_trial_division/: identify_prime_number_using_trial_division.sh
programs_in_bash/maximum_of_three_numbers/: maximum_of_three_numbers.sh
programs_in_bash/move_duplicates_to_specified_directory/: move_duplicates_to_specified_directory.sh
programs_in_bash/next_10_leap_years_after_2000/: next_10_leap_years_after_2000.sh
(+9 files in other folders)
