AC_PREREQ([2.69])
AC_INIT([grep], [0.0.1])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([./headers/options.h])
AC_PROG_CC
AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h strings.h unistd.h regex.h dirent.h])
AC_CHECK_FUNCS([bzero regcomp strstr])
AC_CONFIG_FILES([Makefile
                 makefile])
AC_OUTPUT
